--- a/Robocorp level II certification course-oud/report.html
+++ b/Robocorp level II certification course-oud/report.html
@@ -1625,22 +1625,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,15388],[],[[5,0,0,[],[0,1148,14141,6],[]],[7,0,0,[],[1,15369,11],[]]],[],[2,1,1,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,17562],[],[[5,0,0,[],[0,1080,16390,6],[]],[7,0,0,[],[1,17543,9],[]]],[],[2,1,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*c:\\Users\\gmell\\OneDrive\\RobocorpRepo\\Robocorp level II certification course\\tasks.robot","*Robocorp%20level%20II%20certification%20course/tasks.robot","eNp1jksOwjAMRK8yJwgXqLrgJyqBqCgrdmni0kg0iezQ85O2CNiwe7beeFzE8syWWMChDUnQcRhwmbiJmmntPCpvn5LYkWQ0Co0eM6aeEKYoDtfTEUyGXEzQAo16u0fnHvTrimEiL31ICN03TXZpVtgNLdl/7uwghXmYzr/7FDZMOuWOW1VDs+ndSJ/Q4uSPvJ0XbtB3ElWsYvkCLbxXxQ==","*Order robots from RobotSpareBin Industries Inc","eNqFj8Fqg0AURfd+xcVlFtpuBSGU2u5KIXYVspjojXmgM8Pzqc3ft7bZ1p7l5cDh1jIwTFapBi0QXcdscWIvQQ/s2di61r8OHh++GUbwsyFbtllS/g360I3YEJK1I77DJSjGewxpnu+Oe2nLVNlQoqWndCvzL8lbMBaYRuK5evp4LeNSuCign0WDH+gNs1Nx555wvoVSJw8LaFy0SYn33t0Wle5qP5+yL1WXXsY=","*Minimal task"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*c:\\Users\\gmell\\OneDrive\\RobocorpRepo\\Robocorp level II certification course\\tasks.robot","*tasks.robot","eNp1jksOwjAMRK8yJwgXqLrgJyqBqCgrdmni0kg0iezQ85O2CNiwe7beeFzE8syWWMChDUnQcRhwmbiJmmntPCpvn5LYkWQ0Co0eM6aeEKYoDtfTEUyGXEzQAo16u0fnHvTrimEiL31ICN03TXZpVtgNLdl/7uwghXmYzr/7FDZMOuWOW1VDs+ndSJ/Q4uSPvJ0XbtB3ElWsYvkCLbxXxQ==","*Order robots from RobotSpareBin Industries Inc","eNqFj8Fqg0AURfd+xcVlFtpuBSGU2u5KIXYVspjojXmgM8Pzqc3ft7bZ1p7l5cDh1jIwTFapBi0QXcdscWIvQQ/s2di61r8OHh++GUbwsyFbtllS/g360I3YEJK1I77DJSjGewxpnu+Oe2nLVNlQoqWndCvzL8lbMBaYRuK5evp4LeNSuCign0WDH+gNs1Nx555wvoVSJw8LaFy0SYn33t0Wle5qP5+yL1WXXsY=","*Minimal task"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:14","fail":1,"label":"All Tasks","pass":1,"skip":0}],[],[{"elapsed":"00:00:15","fail":1,"id":"s1","label":"Tasks","name":"Tasks","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:16","fail":1,"label":"All Tasks","pass":1,"skip":0}],[],[{"elapsed":"00:00:18","fail":1,"id":"s1","label":"Tasks","name":"Tasks","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1621938015684;
+window.output["baseMillis"] = 1621954517102;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 15512;
+window.output["generated"] = 17732;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
